--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -6,14 +6,16 @@ For example, you might change some of the default colors:
 
 $light:                           #fff !default;
 $stable:                          #f8f8f8 !default;
-$positive:                        #387ef5 !default;
 $calm:                            #11c1f3 !default;
-$balanced:                        #33cd5f !default;
-$energized:                       #ffc900 !default;
 $assertive:                       #ef473a !default;
-$royal:                           #886aea !default;
+
 $dark:                            #444 !default;
 */
+
+$balanced:                        #98ce23 !default;
+$royal:                           #842b7f !default;
+$energized:                       #ee7820 !default;
+$positive:                        #34bab9 !default;
 
 // The path for our ionicons font files, relative to the built CSS in www/css
 $ionicons-font-path: "../lib/ionic/fonts" !default;
