--- a/www/views/login.html
+++ b/www/views/login.html
@@ -1,20 +1,25 @@
 <ion-view class="login">
   <ion-nav-bar class="bar-balanced">
+    <ion-nav-title>
+      <img src="/img/header-logo.png" />
+    </ion-nav-title>
   </ion-nav-bar>
   <ion-content padding="true">
-    <div class="list list-inset">
-      <label class="item item-input">
-        <input type="text" placeholder="Username">
-      </label>
-    </div>
-    <div class="list list-inset">
-      <label class="item item-input">
-        <input type="text" placeholder="Password">
-      </label>
-    </div>
-    <button class="button button-block button-balanced">
-      Login
-    </button>
+    <form name="loginForm" ng-submit="login(user)">
+      <div class="list list-inset">
+        <label class="item item-input">
+          <input type="email" placeholder="Email" name="email" ng-model="user.email">
+        </label>
+      </div>
+      <div class="list list-inset">
+        <label class="item item-input">
+          <input type="password" placeholder="Password" name="password" ng-model="user.password">
+        </label>
+      </div>
+      <button type="submit" class="button button-block button-balanced">
+        Login
+      </button>
+    </form>
     <h4>Don't have an account?</h4>
     <button class="button button-block button-outline button-balanced">
       Create an account
