--- a/www/views/donor/create-donation.html
+++ b/www/views/donor/create-donation.html
@@ -1,27 +1,29 @@
 <ion-view view-title="Donate">
-    <ion-content>
+  <ion-content>
 
-        <label class="item item-input">
-            <span class="input-label">Item</span>
-            <input type="text">
-        </label>
-        <label class="item item-input">
-            <span class="input-label">Description</span>
-            <input type="text">
-        </label>
-        <label class="item item-input">
-            <span class="input-label">Gross Weight</span>
-            <input type="text">
-        </label>
+    <label class="item item-input">
+      <span class="input-label">Item</span>
+      <input type="text">
+    </label>
+    <label class="item item-input">
+      <span class="input-label">Description</span>
+      <input type="text">
+    </label>
+    <label class="item item-input">
+      <span class="input-label">Gross Weight</span>
+      <input type="text">
+    </label>
 
-        <label class="item item-input">
-            <span class="input-label">Special Instructions</span>
-            <input type="text">
-        </label>
+    <label class="item item-input">
+      <span class="input-label">Special Instructions</span>
+      <input type="text">
+    </label>
 
-        <button class="button button-full button-positive">
+    <div class="bar bar-footer bar-balanced">
+      <button class="button button-full button-positive">
+        Submit
+      </button>
+    </div>
 
-        </button>
-
-    </ion-content>
+  </ion-content>
 </ion-view>
