--- a/www/views/login.html
+++ b/www/views/login.html
@@ -1,7 +1,7 @@
 <ion-view class="login">
   <ion-nav-bar class="bar-balanced">
     <ion-nav-title>
-      <img src="/img/header-logo.png" />
+      <img src="img/header-logo.png" />
     </ion-nav-title>
   </ion-nav-bar>
   <ion-content padding="true">
