--- a/scss/_login.scss
+++ b/scss/_login.scss
@@ -7,4 +7,21 @@
   .nav-bar-title {
     vertical-align: middle;
   }
+
+  .login-error {
+    opacity: 0;
+    transition: opacity 0.5s ease-in;
+
+    &.show {
+      opacity: 1.0;
+    }
+
+    .error-message {
+      text-align: center;
+      color: white;
+      display: block;
+      width: 100%;
+      font-size: 1.25em;
+    }
+  }
 }
