Minor sidemenu changes

--- a/www/views/sidemenu.html
+++ b/www/views/sidemenu.html
@@ -13,15 +13,27 @@
     </ion-side-menu-content>
 
     <ion-side-menu side="left">
-        <ion-header-bar class="bar-stable">
-            <h1 class="title">Left</h1>
-        </ion-header-bar>
         <ion-content>
-            <ion-list>
-                <ion-item nav-clear menu-close>
-                    Login
-                </ion-item>
-            </ion-list>
+          <ion-list>
+              <ion-item href="#">
+                <div class="row">
+                  <div class="col text-center">
+                    <img src="http://www.fillmurray.com/100/100" class="rounded" />
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col col-67">
+                    Name Info
+                  </div>
+                  <div class="col col-50">
+                    Role
+                  </div>
+                </div>
+              </ion-item>
+              <ion-item nav-clear menu-close>
+                  Login
+              </ion-item>
+          </ion-list>
         </ion-content>
     </ion-side-menu>
 </ion-side-menus>
