--- a/www/views/login.html
+++ b/www/views/login.html
@@ -1,9 +1,4 @@
 <ion-view class="login">
-  <ion-nav-bar class="bar-balanced">
-    <ion-nav-title>
-      <img src="img/header-logo.png" />
-    </ion-nav-title>
-  </ion-nav-bar>
   <ion-content padding="true" scroll="false">
     <form name="loginForm" ng-submit="login(user)">
       <div class="list list-inset">
@@ -24,8 +19,6 @@
       </div>
     </form>
     <h4>Don't have an account?</h4>
-    <button class="button button-block button-outline button-balanced">
-      Create an account
-    </button>
+    <a class="button button-block button-outline button-balanced" ui-sref="about">Create an account</a>
   </ion-content>
 </ion-view>
