more driver stuff

--- a/www/views/driverReg1.html
+++ b/www/views/driverReg1.html
@@ -1,6 +1,6 @@
 <ion-view view-title="Driver Registration - Step 1">
     <ion-content>
-      <form name="loginForm" ng-submit="login(user)">
+      <form name="driverReg1Form">
         <div class="list list-inset">
           <label class="item item-input">
             <input type="text" placeholder="First Name" name="first-name" ng-model="user.first_name">
