--- a/www/views/profile.html
+++ b/www/views/profile.html
@@ -1,40 +1,40 @@
 <ion-view class="profile">
-  <ion-content padding="true">
-    <div class="list card">
-
-      <div class="item item-avatar">
+  <ion-content>
+    <div class="images row">
+      <div class="col">
         <img src="img/avatar.svg">
-        <h2>Marty McFly</h2>
-        <p>November 05, 1955</p>
       </div>
-
-      <div class="item item-body">
-        <p>
-          This is a "Facebook" styled Card. The header is created from a Thumbnail List item,
-          the content is from a card-body consisting of an image and paragraph text. The footer
-          consists of tabs, icons aligned left, within the card-footer.
-        </p>
-        <p>
-          <a href="#" class="subdued">1 Like</a>
-          <a href="#" class="subdued">5 Comments</a>
-        </p>
+      <div class="col">
+        <img src="img/car.svg">
       </div>
-
-      <div class="item tabs tabs-secondary tabs-icon-left">
-        <a class="tab-item" href="#">
-          <i class="icon ion-thumbsup"></i>
-          Like
-        </a>
-        <a class="tab-item" href="#">
-          <i class="icon ion-chatbox"></i>
-          Comment
-        </a>
-        <a class="tab-item" href="#">
-          <i class="icon ion-share"></i>
-          Share
-        </a>
-      </div>
-
     </div>
+    <ion-list>
+      <ion-item class="item item-icon-left item-icon-right">
+        <i class="icon ion-person"></i>
+        {{user.first_name}} {{user.last_name}}
+        <i class="icon ion-ios7-arrow-forward"></i>
+      </ion-item>
+      <ion-item class="item item-icon-left item-icon-right">
+        <i class="icon ion-email"></i>
+        <div>{{user.email}}</div>
+        <div>{{user.phone_number}}</div>
+        <i class="icon ion-ios7-arrow-forward"></i>
+      </ion-item>
+      <ion-item class="item item-icon-left item-icon-right">
+        <i class="icon ion-model-s"></i>
+        Current Delivery
+        <i class="icon ion-ios7-arrow-forward"></i>
+      </ion-item>
+      <ion-item class="item item-icon-left item-icon-right">
+        <i class="icon ion-ios7-speedometer"></i>
+        Previous Deliveries
+        <i class="icon ion-ios7-arrow-forward"></i>
+      </ion-item>
+      <ion-item class="item item-icon-left item-icon-right" ui-sref="logout">
+        <i class="icon ion-power"></i>
+        Logout
+        <i class="icon ion-ios7-arrow-forward"></i>
+      </ion-item>
+    </ion-list>
   </ion-content>
 </ion-view>
