--- a/www/views/profile.html
+++ b/www/views/profile.html
@@ -9,7 +9,7 @@
       </div>
     </div>
     <ion-list>
-      <ion-item class="item item-icon-left item-icon-right">
+      <ion-item class="item item-icon-left item-icon-right" ui-sref="app.profile.name">
         <i class="icon ion-person"></i>
         {{user.first_name}} {{user.last_name}}
         <i class="icon ion-ios7-arrow-forward"></i>
