finish prelim driver reg flow

--- a/www/views/driver/driverReg2.html
+++ b/www/views/driver/driverReg2.html
@@ -11,7 +11,7 @@
             <input type="text" placeholder="Driver's License Number" name="drivers-license-number" ng-model="user.drivers_license_number">
           </label>
         </div>
-        <button type="submit" class="button button-block button-positive">
+        <button class="button button-block button-positive" ng-click="moveToStep('3')">
           Next
         </button>
       </form>
