--- a/www/views/driver/driverReg3.html
+++ b/www/views/driver/driverReg3.html
@@ -6,7 +6,7 @@
             <input type="text" placeholder="Zip Code" name="zip-code" ng-model="user.zipcode">
           </label>
         </div>
-        <button type="submit" class="button button-block button-positive">
+        <button class="button button-block button-positive" ng-click="moveToStep('4')">
           Next
         </button>
       </form>
