--- a/www/views/driver/driverReg4.html
+++ b/www/views/driver/driverReg4.html
@@ -32,7 +32,7 @@
             <input type="text" placeholder="Year" name="car-year" ng-model="user.car_year">
           </label>
         </div>
-        <button type="submit" class="button button-block button-positive">
+        <button class="button button-block button-positive" ng-click="moveToStep('5')">
           Next
         </button>
       </form>
