--- a/www/views/driver/driverReg1.html
+++ b/www/views/driver/driverReg1.html
@@ -1,24 +1,22 @@
 <ion-view view-title="Driver Registration - Step 1">
     <ion-content>
-      <form name="driverReg1Form">
-        <div class="list list-inset">
-          <label class="item item-input">
-            <input type="text" placeholder="First Name" name="first-name" ng-model="user.first_name">
-          </label>
-        </div>
-        <div class="list list-inset">
-          <label class="item item-input">
-            <input type="text" placeholder="Last Name" name="last-name" ng-model="user.last_name">
-          </label>
-        </div>
-        <div class="list list-inset">
-          <label class="item item-input">
-            <input type="text" placeholder="Email" name="email" ng-model="user.email">
-          </label>
-        </div>
-        <button type="submit" class="button button-block button-positive">
-          Next
-        </button>
-      </form>
+      <div class="list list-inset">
+        <label class="item item-input">
+          <input type="text" placeholder="First Name" name="first-name" ng-model="user.first_name">
+        </label>
+      </div>
+      <div class="list list-inset">
+        <label class="item item-input">
+          <input type="text" placeholder="Last Name" name="last-name" ng-model="user.last_name">
+        </label>
+      </div>
+      <div class="list list-inset">
+        <label class="item item-input">
+          <input type="text" placeholder="Email" name="email" ng-model="user.email">
+        </label>
+      </div>
+      <button class="button button-block button-positive" ng-click="moveToStep('2')">
+        Next
+      </button>
     </ion-content>
 </ion-view>
