more driver and cowbell

--- a/www/views/driver/listDetail.html
+++ b/www/views/driver/listDetail.html
@@ -1,5 +1,25 @@
 <ion-view view-title="List Detail">
   <ion-content>
-    <h1>{{id}}</h1>
+    <ui-gmap-google-map center="map.center" zoom="map.zoom"></ui-gmap-google-map>
+    <ion-list>
+      <ion-item class="item-divider">
+        Donor
+      </ion-item>
+      <ion-item>
+        Donor
+      </ion-item>
+      <ion-item class="item-divider">
+        Recipient
+      </ion-item>
+      <ion-item>
+        Recipient
+      </ion-item>
+      <ion-item class="item-divider">
+        Donation Details
+      </ion-item>
+      <ion-item>
+        Recipient
+      </ion-item>
+    </ion-list>
   </ion-content>
 </ion-view>
