--- a/www/views/profile.html
+++ b/www/views/profile.html
@@ -14,20 +14,18 @@
         {{user.first_name}} {{user.last_name}}
         <i class="icon ion-ios7-arrow-forward"></i>
       </ion-item>
-      <ion-item class="item item-icon-left item-icon-right">
-        <i class="icon ion-email"></i>
+      <ion-item class="item item-icon-left item-icon-right" ui-sref="app.profile.contactInfo">
+        <i class="icon ion-ios7-information"></i>
         <div>{{user.email}}</div>
         <div>{{user.phone_number}}</div>
+        <div>{{user.address_1}}</div>
+        <div ng-if="user.address_2">{{user.address_2}}</div>
+        <div>{{user.city}}, {{user.state}} {{user.zipcode}}</div>
         <i class="icon ion-ios7-arrow-forward"></i>
       </ion-item>
       <ion-item class="item item-icon-left item-icon-right">
         <i class="icon ion-model-s"></i>
-        Current Delivery
-        <i class="icon ion-ios7-arrow-forward"></i>
-      </ion-item>
-      <ion-item class="item item-icon-left item-icon-right">
-        <i class="icon ion-ios7-speedometer"></i>
-        Previous Deliveries
+
         <i class="icon ion-ios7-arrow-forward"></i>
       </ion-item>
       <ion-item class="item item-icon-left item-icon-right" ui-sref="logout">
