--- a/www/views/profile.html
+++ b/www/views/profile.html
@@ -23,9 +23,10 @@
         <div>{{user.city}}, {{user.state}} {{user.zipcode}}</div>
         <i class="icon ion-ios7-arrow-forward"></i>
       </ion-item>
-      <ion-item class="item item-icon-left item-icon-right">
+      <ion-item class="item item-icon-left item-icon-right" ui-sref="app.profile.vehicleInfo">
         <i class="icon ion-model-s"></i>
-
+        <div>{{user.car_make}} {{user.car_model}} {{user.car_year}} ({{user.license_plate_number}})</div>
+        <div>{{user.drivers_license_number}}</div>
         <i class="icon ion-ios7-arrow-forward"></i>
       </ion-item>
       <ion-item class="item item-icon-left item-icon-right" ui-sref="logout">
