added sexy car image; gtis are the best and so are the people that drive them

--- a/www/views/profile.html
+++ b/www/views/profile.html
@@ -5,7 +5,7 @@
         <img src="img/avatar.svg">
       </div>
       <div class="col">
-        <img src="img/car.svg">
+        <img src="img/driver-car.jpg">
       </div>
     </div>
     <ion-list>
