added photo of a sexy driver

--- a/www/views/profile.html
+++ b/www/views/profile.html
@@ -2,7 +2,7 @@
   <ion-content>
     <div class="images row">
       <div class="col">
-        <img src="img/avatar.svg">
+        <img src="img/driver-photo.jpg">
       </div>
       <div class="col">
         <img src="img/driver-car.jpg">
