initial story screen and choose role screen

--- a/www/views/login.html
+++ b/www/views/login.html
@@ -24,7 +24,7 @@
       </div>
     </form>
     <h4>Don't have an account?</h4>
-    <button class="button button-block button-outline button-balanced">
+    <button ui-sref="app.overview" class="button button-block button-outline button-balanced">
       Create an account
     </button>
   </ion-content>
