--- a/www/views/overview.html
+++ b/www/views/overview.html
@@ -1,5 +1,18 @@
-<ion-view view-title="Search">
-    <ion-content>
-        <h1>test</h1>
-    </ion-content>
+<ion-view>
+  <ion-content class="overview">
+    <h1>Why Food Rescue?</h1>
+    <p>Food waste is a huge problem worldwide. Almost half of the food we produce world wide ends up in landfills. In the United States, the largest single component of landfills is post consumer food waste. There it creates 16% of the US methane emissions. Food production uses 80% of the fresh water consumed in this country. This means we throw away 25% of our freshwater to create green house gas while millions go hungry. That just doesn’t make sense.</p>
+    <div class="row">
+      <div class="col col-50">
+        <button ui-sref="app.choose-role" class="button button-light">
+          Continue
+        </button>
+      </div>
+      <div class="col col-50">
+        <button ui-sref="app.choose-role" class="button button-light">
+          Skip
+        </button>
+      </div>
+    </buttons>
+  </ion-content>
 </ion-view>
