--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -19,9 +19,12 @@ $positive:                        #34bab9 !default;
 
 // The path for our ionicons font files, relative to the built CSS in www/css
 $ionicons-font-path: "../lib/ionic/fonts" !default;
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,700italic,300,400,700);
 
 // Include all of Ionic
 @import "www/lib/ionic/scss/ionic";
 @import "login";
 @import "_util";
 @import "_driver";
+@import "_overview";
+@import "_choose-role";
