--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -24,3 +24,4 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 @import "www/lib/ionic/scss/ionic";
 @import "login";
 @import "_util";
+@import "messages";
