--- a/www/views/sideMenu.html
+++ b/www/views/sideMenu.html
@@ -1,39 +1,40 @@
 <ion-side-menus enable-menu-with-back-views="false">
-    <ion-side-menu-content>
-        <ion-nav-bar class="bar-balanced">
-            <ion-nav-back-button>
-            </ion-nav-back-button>
+  <ion-side-menu-content>
+    <ion-nav-bar class="bar-balanced">
+      <ion-nav-back-button>
+      </ion-nav-back-button>
 
-            <ion-nav-buttons side="left">
-                <button class="button button-icon button-clear ion-navicon" menu-toggle="left">
-                </button>
-            </ion-nav-buttons>
-        </ion-nav-bar>
-        <ion-nav-view name="menuContent"></ion-nav-view>
-    </ion-side-menu-content>
+      <ion-nav-buttons side="left">
+        <button class="button button-icon button-clear ion-navicon" menu-toggle="left">
+        </button>
+      </ion-nav-buttons>
+    </ion-nav-bar>
+    <ion-nav-view name="menuContent"></ion-nav-view>
+  </ion-side-menu-content>
 
-    <ion-side-menu side="left">
-        <ion-content>
-          <ion-list>
-              <ion-item menu-close nav-transition="none" ui-sref="app.profile.main">
-                <div class="row">
-                  <div class="col text-center">
-                    <img src="http://www.fillmurray.com/100/100" class="rounded" />
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="col col-67">
-                    Name Info
-                  </div>
-                  <div class="col col-50">
-                    Role
-                  </div>
-                </div>
-              </ion-item>
-              <ion-item nav-clear menu-close>
-                  Login
-              </ion-item>
-          </ion-list>
-        </ion-content>
-    </ion-side-menu>
+  <ion-side-menu side="left">
+    <ion-content>
+      <ion-list>
+        <ion-item menu-close nav-transition="none" ui-sref="app.profile.main">
+          <div class="row">
+            <div class="col text-center">
+              <img src="http://www.fillmurray.com/100/100" class="rounded"/>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col col-67">
+              Name Info
+            </div>
+            <div class="col col-50">
+              Role
+            </div>
+          </div>
+        </ion-item>
+        <ion-item menu-close class="item item-icon-left" ng-click="logout()">
+          <i class="icon ion-power"></i>
+          Logout
+        </ion-item>
+      </ion-list>
+    </ion-content>
+  </ion-side-menu>
 </ion-side-menus>
