--- a/www/views/profile/contact-info.html
+++ b/www/views/profile/contact-info.html
@@ -1,4 +1,4 @@
-<ion-view>
+<ion-view title="">
   <ion-nav-buttons side="right">
     <button type="button" class="button button-clear" ng-click="save(user)">
       Save
