--- a/www/views/sideMenu.html
+++ b/www/views/sideMenu.html
@@ -37,14 +37,14 @@
         </ion-item>
 
         <!-- Donor and Recipient -->
-        <ion-item ng-if="user.user_type === 'Donor'">
+        <ion-item ng-if="user.user_type === 'Donor'" href="#/app/donor/donate">
           Create a Donation
         </ion-item>
-        <ion-item ng-if="user.user_type === 'Donor' || user.user_type === 'Recipient'">
+        <ion-item ng-if="user.user_type === 'Donor' || user.user_type === 'Recipient'" href="#/app/donor/donations">
           List of Donations
         </ion-item>
 
-        <ion-item menu-close class="item item-icon-left" ng-click="logout()">
+        <ion-item menu-close class="item" ng-click="logout()">
           Logout
         </ion-item>
       </ion-list>
