--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -30,3 +30,9 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 @import "_overview";
 @import "_choose-role";
 @import "profile";
+
+.qrcode {
+  display: block;
+  margin: 24px auto 16px;
+  max-width: 100%;
+}
