--- a/www/views/sideMenu.html
+++ b/www/views/sideMenu.html
@@ -30,6 +30,10 @@
             </div>
           </div>
         </ion-item>
+        <ion-item menu-close class="item item-icon-left" ui-sref="app.handshake">
+          <i class="icon ion-power"></i>
+          Handshake
+        </ion-item>
         <ion-item menu-close class="item item-icon-left" ng-click="logout()">
           <i class="icon ion-power"></i>
           Logout
