--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -30,3 +30,4 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 @import "_overview";
 @import "_choose-role";
 @import "profile";
+@import "donations";
