--- a/www/views/driver/listDetail.html
+++ b/www/views/driver/listDetail.html
@@ -2,6 +2,8 @@
   <ion-content>
     <ui-gmap-google-map center="map.center" zoom="map.zoom">
       <ui-gmap-marker coords="getMyLocation()" idkey="1"></ui-gmap-marker>
+      <ui-gmap-marker coords="getDonorLocation()" idkey="2"></ui-gmap-marker>
+      <ui-gmap-marker coords="getRecipientLocation()" idkey="3"></ui-gmap-marker>
     </ui-gmap-google-map>
     <ion-list>
       <ion-item class="item-divider">
