--- a/www/views/sideMenu.html
+++ b/www/views/sideMenu.html
@@ -44,10 +44,10 @@
           List of Donations
         </ion-item>
 
-        <ion-item menu-close class="item item-icon-left" ui-sref="app.handshake">
+        <ion-item menu-close ui-sref="app.handshake">
           Handshake
         </ion-item>
-        <ion-item menu-close class="item item-icon-left" ng-click="logout()">
+        <ion-item menu-close ng-click="logout()">
           Logout
         </ion-item>
       </ion-list>
