registration for all three roles

--- a/www/views/choose-role.html
+++ b/www/views/choose-role.html
@@ -3,7 +3,7 @@
     <div class="choose-role-header">
       I would like to...
     </div>
-    <a ui-sref="app.donorReg">
+    <a ui-sref="app.donorReg.step1">
       <div class="reg-link donations">
         make donations
       </div>
@@ -13,7 +13,7 @@
         volunteer to deliver
       </div>
     </a>
-    <a ui-sref="app.recipientReg">
+    <a ui-sref="app.recipientReg.step1">
       <div class="reg-link recipient">
         become a recipient partner
       </div>
