--- a/www/views/driver/driverReg3.html
+++ b/www/views/driver/driverReg3.html
@@ -1,12 +1,32 @@
 <ion-view view-title="Driver Registration - Step 3">
     <ion-content>
-      <form name="driverReg3Form">
+      <form name="driverReg3Form" ng-submit="moveToStep('4')">
         <div class="list list-inset">
           <label class="item item-input">
-            <input type="text" placeholder="Zip Code" name="zip-code" ng-model="user.zipcode">
+            <input type="text" ng-required="true" placeholder="Address 1" name="address-1" ng-model="user.address1">
           </label>
         </div>
-        <button class="button button-block button-positive" ng-click="moveToStep('4')">
+        <div class="list list-inset">
+          <label class="item item-input">
+            <input type="text" placeholder="Address 2" name="address-2" ng-model="user.address2">
+          </label>
+        </div>
+        <div class="list list-inset">
+          <label class="item item-input">
+            <input type="text" ng-required="true" placeholder="Zip Code" name="zip-code" ng-model="user.zipcode">
+          </label>
+        </div>
+        <div class="list list-inset">
+          <label class="item item-input">
+            <input type="text" ng-required="true" placeholder="City" name="city" ng-model="user.city">
+          </label>
+        </div>
+        <div class="list list-inset">
+          <label class="item item-input">
+            <input type="text" ng-required="true" placeholder="State" name="state" ng-model="user.state">
+          </label>
+        </div>
+        <button type="submit" class="button button-block button-positive">
           Next
         </button>
       </form>
