--- a/www/views/profile.html
+++ b/www/views/profile.html
@@ -1,4 +1,4 @@
-<ion-view class="profile">
+<ion-view title="" class="profile">
   <ion-content>
     <div class="images row">
       <div class="col">
