--- a/www/views/driver/driverReg1.html
+++ b/www/views/driver/driverReg1.html
@@ -1,22 +1,28 @@
 <ion-view view-title="Driver Registration - Step 1">
     <ion-content>
+    <form name="driverReg1Form" ng-submit="createUser()">
       <div class="list list-inset">
         <label class="item item-input">
-          <input type="text" placeholder="First Name" name="first-name" ng-model="user.first_name">
+          <input type="text" ng-required="true" placeholder="First Name" name="first-name" ng-model="user.first_name">
         </label>
       </div>
       <div class="list list-inset">
         <label class="item item-input">
-          <input type="text" placeholder="Last Name" name="last-name" ng-model="user.last_name">
+          <input type="text" ng-required="true" placeholder="Last Name" name="last-name" ng-model="user.last_name">
         </label>
       </div>
       <div class="list list-inset">
         <label class="item item-input">
-          <input type="text" placeholder="Email" name="email" ng-model="user.email">
+          <input type="text" ng-required="true" placeholder="Email" name="email" ng-model="user.email">
         </label>
       </div>
-      <button class="button button-block button-positive" ng-click="moveToStep('2')">
-        Next
+      <div class="list list-inset">
+        <label class="item item-input">
+          <input type="password" ng-required="true" placeholder="Password" name="last-name" ng-model="user.password">
+        </label>
+      </div>
+      <button type="submit" class="button button-block button-positive">
+        Register
       </button>
     </ion-content>
 </ion-view>
