--- a/www/views/driver/driverReg5.html
+++ b/www/views/driver/driverReg5.html
@@ -1,6 +1,6 @@
 <ion-view view-title="Driver Registration - Step 5">
     <ion-content>
-      <form name="driverRegForm">
+      <form name="driverReg5Form" ng-submit="updateDriverInfo()">
         <div class="list list-inset">
           <label class="item item-input">
             <input type="text" placeholder="Driver Photo"/>
@@ -11,8 +11,8 @@
             <input type="text" placeholder="Vehicle Photo"/>
           </label>
         </div>
-        <button class="button button-block button-positive" ng-submit="submit()">
-          Submit Registration
+        <button type="submit" class="button button-block button-positive">
+          Update Driver Info
         </button>
       </form>
     </ion-content>
