--- a/www/views/driver/listing.html
+++ b/www/views/driver/listing.html
@@ -1,5 +1,9 @@
 <ion-view view-title="Donations Needing Drivers">
   <ion-content>
+    <ion-refresher
+      pulling-text="Pull to refresh..."
+      on-refresh="refresh()">
+    </ion-refresher>
     <ion-item ng-repeat="donation in donations" href="#/app/driver/listing/details/{{ donation.donor.id }}/{{ donation.id }}">
       <div class="row">
         <div class="col col-67"><b>{{ donation.donor.first_name + ' ' + donation.donor.last_name }}</b></div>
