profile avatar for non drivers + show org name on list detail

--- a/scss/_profile.scss
+++ b/scss/_profile.scss
@@ -5,4 +5,13 @@
       vertical-align: middle;
     }
   }
+
+  .dummy-avatar {
+    img {
+      max-height: 200px;
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+    }
+  }
 }
