--- a/www/views/driver/listDetail.html
+++ b/www/views/driver/listDetail.html
@@ -22,7 +22,7 @@
         Recipient
       </ion-item>
       <ion-item>
-        <b>{{ donation.recipient.first_name + ' ' + donation.recipient.last_name }}</b>
+        <b>{{ donation.recipient.organization_name }}</b>
         <br>
         {{ donation.recipient.address_1 }}
         <br>
