initial handshake stuff

--- a/scss/_driver.scss
+++ b/scss/_driver.scss
@@ -1,1 +1,9 @@
 .angular-google-map-container { height: 400px; }
+
+.available-delivery {
+  .inner-list {
+    .list {
+      padding-bottom: 44px;
+    }
+  }
+}
