--- a/www/views/driver/listDetail.html
+++ b/www/views/driver/listDetail.html
@@ -1,11 +1,11 @@
-<ion-view view-title="List Detail">
+<ion-view view-title="Available Delivery" class="available-delivery">
   <ion-content>
     <ui-gmap-google-map center="map.center" zoom="map.zoom">
       <ui-gmap-marker coords="getMyLocation()" idkey="1"></ui-gmap-marker>
       <ui-gmap-marker coords="getDonorLocation()" idkey="2"></ui-gmap-marker>
       <ui-gmap-marker coords="getRecipientLocation()" idkey="3"></ui-gmap-marker>
     </ui-gmap-google-map>
-    <ion-list>
+    <ion-list class="inner-list">
       <ion-item class="item-divider">
         Donor
       </ion-item>
@@ -22,7 +22,7 @@
         Recipient
       </ion-item>
       <ion-item>
-        <b>{{ donation.recipient.first_name + ' ' + donation.recipient.last_name }}</b>
+        <b>{{ donation.recipient.organization_name }}</b>
         <br>
         {{ donation.recipient.address_1 }}
         <br>
