--- a/www/views/donor/list-donations.html
+++ b/www/views/donor/list-donations.html
@@ -13,10 +13,20 @@
     <ion-refresher pulling-text="Pull to refresh" on-refresh="refreshDonations()"></ion-refresher>
 
     <ion-list can-swipe="true" class="donations">
+      <div class="item item-divider assertive">
+        Action Required
+      </div>
+      <ion-item ng-repeat="donation in donations | filter:actionRequired()" ng-click="view(donation)" class="item-thumbnail-left">
+        <img ng-src="{{donation.image}}">
+        <h2>{{donation.name}}</h2>
+        <p>{{donation.description}}</p>
+        <p class="donation-state">{{donation.status}}</p>
+      </ion-item>
+
       <div class="item item-divider">
         In Progress
       </div>
-      <ion-item ng-repeat="donation in donations | filter:!completed()" ng-click="view(donation)" class="item-thumbnail-left">
+      <ion-item ng-repeat="donation in donations | filter:inProgress()" ng-click="view(donation)" class="item-thumbnail-left">
         <img ng-src="{{donation.image}}">
         <h2>{{donation.name}}</h2>
         <p>{{donation.description}}</p>
