--- a/www/views/donor/list-donations.html
+++ b/www/views/donor/list-donations.html
@@ -13,7 +13,7 @@
     <ion-refresher pulling-text="Pull to refresh" on-refresh="refreshDonations()"></ion-refresher>
 
     <ion-list can-swipe="true" class="donations">
-      <div class="item item-divider assertive">
+      <div class="item item-divider assertive" ng-show="anyActionRequired(donations)">
         Action Required
       </div>
       <ion-item ng-repeat="donation in donations | filter:actionRequired()" ng-click="view(donation)" class="item-thumbnail-left">
