added item name to current delivery

--- a/www/views/driver/current-delivery.html
+++ b/www/views/driver/current-delivery.html
@@ -2,6 +2,12 @@
   <ion-content>
     <ion-list class="inner-list">
       <ion-item class="item-divider">
+        Item
+      </ion-item>
+      <ion-item>
+        {{donation.name}}
+      </ion-item>
+      <ion-item class="item-divider">
         Donor
       </ion-item>
       <ion-item class="item-icon-right">
