--- a/www/views/overview.html
+++ b/www/views/overview.html
@@ -1,20 +1,17 @@
 <ion-view title="Why Food Rescue?">
-  <ion-content class="overview">
+  <ion-content class="overview" padding="true">
     <div class="row">
       <div class="col col-offset-5 col-85">
-      <p>Food waste is a huge problem worldwide.</p> 
-      <p>Almost half of the food we produce world wide ends up in landfills. In the United States, the largest single component of landfills is post consumer food waste. There, it creates 16% of the US methane emissions. Food production uses 80% of the fresh water consumed in this country. This means we throw away 25% of our freshwater to create green house gas while millions go hungry.</p>
-      <p>That just doesn’t make sense.</p>
-    </row>
-    <div class="row">
-      <div class="col">
-        <button ui-sref="app.choose-role" class="button button-full button-balanced">
-          Continue
-        </button>
-        <button ui-sref="app.choose-role" class="button button-full button-stable">
-          Skip
-        </button>
+        <p>Food waste is a huge problem worldwide.</p>
+        <p>Almost half of the food we produce world wide ends up in landfills. In the United States, the largest single component of landfills is post consumer food waste. There, it creates 16% of the US methane emissions. Food production uses 80% of the fresh water consumed in this country. This means we throw away 25% of our freshwater to create green house gas while millions go hungry.</p>
+        <p>That just doesn’t make sense.</p>
       </div>
     </div>
+    <button ui-sref="app.choose-role" class="button button-block button-balanced">
+      Continue
+    </button>
+    <button ui-sref="app.choose-role" class="button button-block button-stable">
+      Skip
+    </button>
   </ion-content>
 </ion-view>
