--- a/www/views/sideMenu.html
+++ b/www/views/sideMenu.html
@@ -47,6 +47,9 @@
         <ion-item menu-close ng-click="logout()">
           Logout
         </ion-item>
+        <ion-item>
+          {{user.user_type}}
+        </ion-item>
       </ion-list>
     </ion-content>
   </ion-side-menu>
